css/style.css
/* ... */
/* common class for color */
.dark-red{
	color: #CB0A07!important;
}
.dark-red-bg{
	background-color: #CB0A07!important;
}
.red{
	color: #E10000!important;
}
.pink{
	color: #FF001A!important;
}
.pink-bg{
	background-color: #FF001A!important;
}
.dark-pink{
	color: #EA2C2D!important;
}
.dark-ash{
	color: #292826!important;
}
.mid-ash{
	color: #666666!important;
	font-size: 15px;
}
.light-ash{
	color: #8E8A83!important;
}
.dark-black{
	color: #222222!important;
}
.product-bg{
	background-color: #F6F7F7!important;
}

